added repetition detection, modified negamax return value